test/corpus/dat_with_option_containing_element_with_nested_dat.txt
===
DAT with option containing element with nested DAT
===
~(field_outer;parameter=<li>~(field_inner)</li>;)

---

(document
    (paren_dat
        (dat_name
            (dat_name_part)
        )
        (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value
                (paren_dat
                    (dat_name
                        (dat_name_part)
                    )
                )
            )
        )
    )
)
