test/corpus/database_field_access.txt
===
Database Field Access ~([TABLE.EXT]FIELD)
===
<p title="~([USERS]LASTFIRST)">Hi ~([USERS.U_PERSON_PREFERENCES]NICKNAME).</p>

---
(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (database_field_access
              (database_table_name)
              (database_field_name))))))
    (text)
    (database_field_access
      (database_table_name)
      (database_extension_name)
      (database_field_name))
    (text)
    (end_tag
      (tag_name))))
