test/corpus/database_field_access_extension.txt
===
Database field access with extension
===
Hello, ~([STUDENTS.EXTENSION_NAME]FIELD_NAME).

---
(document
    (text)
    (database_field_access
        (database_table_name)
        (database_extension_name)
        (database_field_name)
    )
    (text)
)
