test/corpus/database_field_access_without_extension.txt
===
Database field access without database extension
===
<p title="X ~([USERS]LASTFIRST) Z"></p>

---
(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (database_field_access
              (database_table_name)
              (database_field_name))))))
    (end_tag
      (tag_name))))
