test/corpus/gpv.txt
===
GPV (with & without opts, in attr & text)
===
<div style="scale: ~(gpv.attr;num)" ~(gpv.x)>
    ~(gpv.foo;if.blank.then=Another Value;sqlText)
</div>

---
(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value
            (dat
              (paren_dat
                (dat_name
                  (dat_name_part)
                  (dat_name_part))
                (dat_option
                  (dat_option_name)))))))
      (attribute
        (dat
          (paren_dat
            (dat_name
              (dat_name_part)
              (dat_name_part))))))
    (dat
      (paren_dat
        (dat_name
          (dat_name_part)
          (dat_name_part))
        (dat_option
          (dat_option_name)
          (dat_option_operator)
          (dat_option_value))
        (dat_option
          (dat_option_name))))
    (end_tag
      (tag_name))))
