test/corpus/if_else_labelled_embedded_elements_and_dats.txt
===
if/else, labelled, embedded elements & DATs
===
<div class="prose">
    <p>
    ~[if#security.pagemod=/admin/students/generaldemographics.html]
    <a href="/admin/students/generaldemographics.html?frn=~(studentfrn)">~([STUDENTS]LASTFIRST)</a>
    [else#security]
    ~([STUDENTS]LASTFIRST)
    [/if#security]
    is failing some classes.
    </p>
</div>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (element
      (start_tag
        (tag_name))
      (if_block
        (if_start_tag
          (label)
          (if_condition
            (condition_lhs)
            (condition_operator)
            (condition_rhs)))
        (block_content
          (element
            (start_tag
              (tag_name)
              (attribute
                (attribute_name)
                (quoted_attribute_value
                  (attribute_value
                    (paren_dat
                      (dat_name
                        (dat_name_part)))))))
            (database_field_access
              (database_table_name)
              (database_field_name))
          (end_tag
            (tag_name))))
        (else_tag
          (label))
        (block_content
          (database_field_access
            (database_table_name)
           (database_field_name)))
      (if_end_tag
        (label)))
      (text)
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))
