test/corpus/if_no_content.txt
===
if (no content) else
===
~[if.is.a.school][else]District Office[/if]

---
(document
  (if_block
    (if_start_tag
      (if_condition
        (condition_lhs)))
    (else_tag)
    (text)
    (if_end_tag)))
