test/corpus/if_template_ampersand.txt
===
if with ampersand in template
===
~[if.is.a.school]&recordSaved=1[/if]

---

(document
  (if_block
    (if_start_tag
      (if_condition
        (condition_lhs)))
    (block_content
      (entity)
      (text))
    (if_end_tag)))
