test/corpus/if_unlabelled_no_operator.txt
===
if block (unlabelled with no operator)
===
~[if.is.a.school]
<p>Hello</p>
[/if]

---

(document
  (if_block
    (if_start_tag
      (if_condition
        (condition_lhs)))
    (element
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (if_end_tag)))
