test/corpus/nested_paren_dat.txt
===
Nested inline DAT
===
~(gpv.studentid;if.blank.then=~(curstudid;num))

---

(document
  (paren_dat
    (dat_name
      (dat_name_part)
      (dat_name_part)
    )
    (dat_option
      (dat_option_name)
      (dat_option_operator)
      (dat_option_value
        (paren_dat
          (dat_name
            (dat_name_part)
          )
          (dat_option
            (dat_option_name)
          )
        )
      )
    )
  )
)
