test/corpus/parenthetical_left_open.txt
===
Parenthetical (left open)
===
~(gpv.foo;then=(Hello, keep;else=Ok (bye kid;)
<p>Next item</p>
---

(document
  (paren_dat
    (dat_name
        (dat_name_part)
        (dat_name_part)
    )
    (dat_option
        (dat_option_name)
        (dat_option_operator)
        (dat_option_value
            (parenthetical)
        )
    )
    (dat_option
        (dat_option_name)
        (dat_option_operator)
        (dat_option_value
            (parenthetical)
        )
    )
  )
  (element
    (start_tag
      (tag_name))
    (text)
    (end_tag
      (tag_name)
    )
  )
)
