test/corpus/tlist_sql_embedded_in_html.txt
===
TLIST_SQL Embedded in HTML
===
<ul class="flex-col">
    ~[tlist_sql;
    select lastfirst
    from students
    where enroll_status = 0
    order by student_number
    ]
    <li>
        ~(student_name;html)
    </li>
    [/tlist_sql]
</ul>

---

(document
  (element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (tlist_sql
      (tlist_query)
      (tlist_template
        (element
          (start_tag
            (tag_name))
          (paren_dat
            (dat_name
              (dat_name_part))
            (dat_option
              (dat_option_name)))
          (end_tag
            (tag_name)))))
    (end_tag
      (tag_name))))
