test/corpus/tlist_sql_nonemessage_html.txt
===
TLIST_SQL NoneMessage HTML
===
~[tlist_sql;select 1 from dual;nonemessage=<p>Thats not gonna work</p>]
<p>
    Greetings ~(col0), I am ~(col_1;l;if.test=1;then=happy;else=not happy, Bob).
</p>
[/tlist_sql]

---
(document
  (dat
    (tlist_sql
      (tlist_query)
      (dat_option
        (dat_option_name)
        (dat_option_operator)
        (dat_option_value))
      (tlist_template
        (tlist_template_text)
        (tlist_variable
          (dat_name
            (dat_name_part)))
        (tlist_template_text)
        (tlist_variable
          (dat_name
            (dat_name_part))
          (dat_option
            (dat_option_name))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value)))
        (tlist_template_text)))))
