test/corpus/tlist_sql_standard.txt
===
TLIST_SQL Standard
===
~[tlist_sql;select 1 from dual]
<p>
    Greetings ~(col0), I am ~(col_1;l;if.test=1;then=happy;else=not happy, Bob.
    Not. Happy).
</p>
[/tlist_sql]

---

(document
  (tlist_sql
    (tlist_query)
    (tlist_template
      (element
        (start_tag
          (tag_name))
        (text)
        (paren_dat
          (dat_name
            (dat_name_part)))
        (text)
        (paren_dat
          (dat_name
            (dat_name_part))
          (dat_option
            (dat_option_name))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value))
          (dat_option
            (dat_option_name)
            (dat_option_operator)
            (dat_option_value)))
        (text)
        (end_tag
          (tag_name))))))
